@@ -2,6 +2,9 @@
 =====================
 Added ArmorUtils (converts between world and armor grid coordinates)
 Added DefenseType enumeration (HULL, ARMOR, SHIELD, PHASE)
+Changes to SimpleEntity:
+ - New constructor SimpleEntity(Vector2f location, CombatEntityAPI anchor)
+   getLocation() will return a location relative to and rotated with the anchor
 Changes to WeaponUtils:
  - New methods to check how much damage you would deal to a specific target:
  - Added calculateActualDamage(float baseDamage, WeaponAPI weapon,
